<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Phật âm</string>
    <string name="action_settings">Settings</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Từ khóa</string>
    <string name="hello">Phật âm v1.0</string>
	<string name="github">GitHub</string>
	<string name="more">Thêm</string>
	<string name="github_label">SlidingMenu on GitHub</string>
	<string name="title_bar_slide">Phật âm</string>
	<string name="category_title">Phật âm</string>
	<string name="top_video">Nổi bật</string>
	<string name="new_video">Mới</string>
	<string name="random_video">Ngẫu nhiên</string>
	<string name="related_video">Video liên quan</string>
	<string name="same_author_video">Video cùng Tác giả</string>
	<string name="hot_video">Video hay</string>
	<string name="empty">Không có dữ liệu</string>
	<string name="type_video_rating">Lượt xem</string>
	<string name="type_video_date">Ngày</string>
	<string name="type_video_title">Tiêu đề</string>
	<string-array name="list_category_array">
        <item>Chuyên mục</item>
        <item>Tác giả</item>
        <item>Top Videos</item>
        <item>New Videos</item>
        <item>Random Videos</item>
        <item>Liên hệ</item>
    </string-array>
    <string name="setting_title">Công cụ</string>
    <string-array name="list_setting_array">
	    <item>Cài đặt</item>
	    <item>Đóng ứng dụng</item>
	</string-array>
	<string-array name="detail_category_array">
        <item>Kinh- Chú</item>
        <item>Pháp thoại</item>
        <item>Sách nói</item>
        <item>Tân nhạc Phật giáo</item>
        <item>Cổ nhạc Phật giáo</item>
        <item>Nhạc thiền</item>
        <item>Phim truyện</item>
        <item>Phim tài liệu</item>
        <item>Phật pháp nhiệm màu</item>
        <item>Ánh sáng phật pháp</item>
        <item>Một ngày an lạc</item>
    </string-array>
    
	<string-array name="detail_authors_array">
        <item>Phật âm</item>
        <item>Thích Nhật Từ</item>
        <item>Thích Trí Huệ</item>
        <item>Pháp Sư Tịnh Không</item>
        <item>Thích Phước Tiến</item>
        <item>Thích Pháp Hòa</item>
        <item>Thích Thiện Thuận</item>
        <item>Thích Thanh Từ</item>
        <item>Thích Minh Thành</item>
        <item>Thích Bửu Chánh</item>
        <item>Thích Giác Hóa</item>
        <item>Thích Chân Quang</item>
        <item>Thích Giác Nhàn</item>
        <item>Thích Trí Quảng</item>
        <item>Diệu Pháp Âm</item>
        <item>Võ Tá Hân</item>
        <item>Ban Hoằng Pháp</item>
        <item>Ngân Huệ</item>
        <item>Thích Đồng Thành</item>
        <item>Thích Lệ Trang</item>
        <item>Thích Chánh Định</item>
        <item>Cư Sĩ Tánh Thấy</item>
        <item>Thích Minh Chơn</item>
        <item>Thích Viên Trí</item>
        <item>Thích Nữ Như Thủy</item>
    </string-array>
    
	<string-array name="detail_video_array">
        <item>Tụng "Kinh Diệu Pháp Liên Hoa" (Kinh Pháp Hoa)</item>
        <item>Tân Tế Công 2011 HD - Thuyết minh tiếng Việt </item>
        <item>Sự Tích Di Lặc Bồ Tát </item>
        <item>Khuyên Người Niệm Phật (Trọn Bộ, Rất Hay)</item>
        <item>Nhạc Chú Đại Bi (Có Chữ, Tiếng Phạn) (Rất Hay) (HD)</item>
        <item>Phim hoạt hình: Tây Du Ký</item>
        <item>Tụng "Kinh Hồng Danh Sám Hối" (Có Phụ Đề)</item>
        <item>Nhạc "Chú Đại Bi" (Tiếng Phạn, Có Chữ) (Trì 21 Lần) (Mới, Rất Hay)</item>
        <item>Phật pháp nhiệm màu</item>
        <item>Kinh A Di Đà (Bản Việt Văn) (Phiên Bản Mới, Rất Hay)- Thích Trí Thoát tụng</item>
        <item>Nhạc Niệm Phật A Di Đà (Mới, 2011) (Rất Hay) </item>
        <item>Tụng "Chú Đại Bi" (Bản Việt Văn, Có Chữ) (Dễ Học Thuộc) </item>
        <item>Nhạc Niệm Phật 4 Chữ "A Di Đà Phật" (Mới, Rất Hay)</item>
        <item>Tụng "Chú Đại Bi" (Mới)</item>
        <item>Tụng "Kinh Diệu Pháp Liên Hoa" (Kinh Pháp Hoa)</item>
        <item>Tân Tế Công 2011 HD - Thuyết minh tiếng Việt </item>
        <item>Sự Tích Di Lặc Bồ Tát </item>
        <item>Khuyên Người Niệm Phật (Trọn Bộ, Rất Hay)</item>
        <item>Nhạc Chú Đại Bi (Có Chữ, Tiếng Phạn) (Rất Hay) (HD)</item>
        <item>Phim hoạt hình: Tây Du Ký</item>
        <item>Tụng "Kinh Hồng Danh Sám Hối" (Có Phụ Đề)</item>
         
    </string-array>
    
	<string-array name="detail_video_author_array">
	    <item>Thích Trí Thoát</item>
	    <item>Phật Âm</item>
	    <item>>Phật Âm</item>
	    <item>Cư Sĩ Diệu Âm</item>
	    <item>Phật Âm</item>
	    <item>Phật Âm</item>
	    <item>Thích Trí Thoát</item>
	    <item>Phật Âm</item>
	    <item>Thích Trí Thoát</item>
	    <item>Phật Âm</item>
	    <item>Thích Trí Thoát</item>
	    <item>Phật Âm</item>
	    <item>Phật Âm</item>
	    <item>Thích Trí Thoát</item>
	    <item>Phật Âm</item>
	    <item>Thích Trí Thoát</item>
	    <item>Phật Âm</item>
	    <item>>Phật Âm</item>
	    <item>Cư Sĩ Diệu Âm</item>
	    <item>Phật Âm</item>
	    <item>Phật Âm</item>
	    <item>Thích Trí Thoát</item>
	    <item>Phật Âm</item>
	    <item>Thích Trí Thoát</item>
    </string-array>
</resources>
