<?xml version="1.0" encoding="utf-8"?>
<FrameLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_fragment"
    android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<ScrollView 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent">
		<LinearLayout  
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="vertical">
			<ListView 
			    android:id="@+id/home_fragment_list_description"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:paddingLeft="@dimen/list_padding"
			    android:paddingRight="@dimen/list_padding"
			    android:divider="#e8e8e8"/>
			<TextView 
			    android:id="@+id/home_fragment_text_video"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:text="Video"
			    android:textAppearance="@android:style/TextAppearance.Medium"/>
			<RelativeLayout 
			    android:layout_width="match_parent"
			    android:layout_height="1dp"
			    android:orientation="horizontal"
			    android:background="#ef1b1b"
			    android:layout_below="@id/home_fragment_text_video"/>
			<LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:weightSum="3">
			    
			    <Button 
			        android:id="@+id/home_fragment_btn_show_top_video"
			        android:layout_width="0dp"
			        android:layout_weight="1"
			        android:layout_height="match_parent"
			        android:layout_margin="5dp"
			        android:text="@string/top_video"
			        android:textSize="15dip"/>
	
			    <Button
			        android:id="@+id/home_fragment_btn_show_new_video"
			        android:layout_width="0dp"
			        android:layout_weight="1"
			        android:layout_height="match_parent"
			        android:layout_margin="5dp"
			        android:text="@string/new_video" 
			        android:textSize="15dip"/>
	
			    <Button 
			        android:id="@+id/home_fragment_btn_show_random_video"
			        android:layout_width="0dp"
			        android:layout_weight="1"
			        android:layout_height="match_parent"
			        android:layout_margin="5dp"
			        android:text="@string/random_video"
			        android:textSize="15dip"/>
			</LinearLayout>
			  <FrameLayout 
			      android:id="@+id/home_fragment_fragment"
			      android:layout_width="match_parent"
			      android:layout_height="wrap_content"/>
			  
			  <!-- <Button 
			      android:id="@+id/home_fragment_btn_show_more_video"
			      android:layout_width="match_parent"
			      android:layout_height="wrap_content"
			      android:layout_gravity="bottom|center"
			      android:text="@string/more"/> -->
			
		</LinearLayout>
	</ScrollView>
</FrameLayout>

    